

	**************************************************
	*						 *
	*	       2.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.9.1 patched


NEW FEATURES

    o	The --internet2 command line option sets a flag internally;
	that flag is now visible and controllable from R using the
	setInternet2() function.
	
	
BUG FIXES

    o	Topics marked as "internal" in help files were not visible
    	from CHM help.



		CHANGES IN R VERSION 2.9.1


BUG FIXES

    o	memory.limit(size) gave a spurious error message.
    
    o	file.choose() and the save console dialog did not set the
	file filters properly.

    o	Rcmd INSTALL --build in 2.9.0 did not make _bundles_ in the
	format install.packages() expected.

    o	Calling setWinProgressBar() on a closed bar gives an error
	message, rather than crashing R.  (PR#13709)

    o	sprintf("%a") works better in some cases thanks to a patch to
	trio from Ei-ji Nakama.

    o	Scrolling controls (e.g. from View() and edit()) did not handle
	large line counts well.

    o	capabilities("tiff") was incorrectly being reported as FALSE
	(due to an error in the Windows-specific config.h file).

    

    		CHANGES IN R VERSION 2.9.0


NEW FEATURES

    o	memory.size() and memory.limit() now return rounded values.
    
    o	The Rgui preferences dialog now allows more flexible colour
    	settings, and shows a sample of what will be displayed.

    o	The file selection items on Rgui's File menu now work in
	Unicode and so allow filenames not in the current encoding to
	be selected.

    o	file.choose() and choose.files() now work with Unicode file
	names, so are able to select filenames not in the current
	encoding.  (Note that we do not expect to handle directory
	paths not in the current encoding and they will not be
	retained as the current search directory.)

    o	The script editor is now able to open files with names which are